Removed uses of guava